test/compilable/imports/test74.d
module imports.test74;

private template bar()
{
    alias int bar;
}

alias bar foo;
