test/fail_compilation/fail130.d
template Tuple(T...) { alias T Tuple; }
  alias Tuple!(int,int) TType;

  TType foo()
  {
        return TType;
  }

